# meta-evolutionary-framework

./: ADIF-Adaptive-Dynamic-Iteration-Framework-Convergence-Mode-Lineage-and-Engineering-Practice.md  ADIF-自适应动态迭代框架：收敛模式谱系与工程实践初探.md  Adaptive-Dynamic-Iteration-Framework.md  Holographic-Feedback-Cosmology.md  Holographic-Memory-Formalism.md  IFLOW.md  LICENSE  LICENSE.md  README.md  self-referential-quantum-channels-emergent-cosmology.md  全息反馈宇宙学-循环宇宙模型.md  全息记忆范式.md  自参考量子通道：涌现宇宙学的概念框架.md  自适应动态迭代框架-概念与实践.md
archive/: eigen.py  eigen_data_20260127_214420.npz  元动力学宣言：周期性相变与认知框架的结构性.md
fhp/: .clang-format  CMakeLists.txt  fhp-c.cpp  fhp-e.cpp
